@@ -1,3 +1,5 @@
+* Add warning for late supplier moves when creating purchase request
+
 Version 2.8.0 - 2013-04-22
 * Bug fixes (see mercurial logs for details)
 * find_best_supplier doesn't optimize anymore on the delivery delay
